--- a/WinDrops/View/UCSetupController.xaml
+++ b/WinDrops/View/UCSetupController.xaml
@@ -6,96 +6,76 @@
              xmlns:local="clr-namespace:WinDrops.View"
              xmlns:view="clr-namespace:WinDrops.View"
              xmlns:viewmod="clr-namespace:WinDrops.ViewModel"
+             xmlns:mod="clr-namespace:WinDrops.Model"
              xmlns:sys="clr-namespace:System;assembly=mscorlib"
+             d:DataContext="{d:DesignInstance Type=viewmod:ViewModel}"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     
     <UserControl.Resources>
-        <DataTemplate DataType="{x:Type viewmod:VMDevice}">
-            <view:UCDevice />
-        </DataTemplate>
         <sys:Int32 x:Key="SpanAll">2147483647</sys:Int32>
+        <local:DevicetypeToColorConverter x:Key="DevicetypeToColorConverter" />
     </UserControl.Resources>
 
     <Grid Margin="15">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="130"/>
-            <ColumnDefinition Width="130"/>
-            <ColumnDefinition Width="130"/>
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="140"/>
+            <RowDefinition Height="180"/>
             <RowDefinition Height="40"/>
             <RowDefinition Height="*"/>
-            <RowDefinition Height="30"/>
         </Grid.RowDefinitions>
 
-        <StackPanel Grid.Column="0" Grid.Row="0" HorizontalAlignment="Center" VerticalAlignment="Top">
-            <Button Content="Create Valve" Grid.Column="1" Margin="2" Width="120" 
-                    Command="{Binding VmDropConfig.ICAddDevice}" CommandParameter="Valve" />
-            <Button Content="Create Flash" Grid.Column="1" Margin="2"
-                    Command="{Binding VmDropConfig.ICAddDevice}" CommandParameter="Flash" />
-            <Button Content="Create Camera" Grid.Column="1" Margin="2"
-                    Command="{Binding VmDropConfig.ICAddDevice}" CommandParameter="Camera" />
-            <Button Content="Delete sel. Devices" Grid.Column="1" Margin="2"
-				Command="{Binding VmDropConfig.ICDelSelDevices}" />
-        </StackPanel>
-        <StackPanel Grid.Column="1" Grid.Row="0" HorizontalAlignment="Center" VerticalAlignment="Top">
-            <Button Content="Show Info" Margin="2" Width="100"
-                    Command="{Binding VmSerialCom.ICSendCmd}" CommandParameter="Info" />
-            <Button Content="Load Tasks" Margin="2"
-                    Command="{Binding VmSerialCom.ICSetTasks}" />
-            <Button Content="Clear Tasks" Margin="2"
-                    Command="{Binding VmSerialCom.ICSendCmd}" CommandParameter="Reset" />
-        </StackPanel>
-        <Grid Grid.Column="2" Grid.Row="0" HorizontalAlignment="Center" VerticalAlignment="Top">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="2*" MinWidth="70"/>
-                <ColumnDefinition Width="30"/>
-            </Grid.ColumnDefinitions>
+        <Grid Grid.Column="0" Grid.Row="0" Margin="2,0">
             <Grid.RowDefinitions>
-                <RowDefinition Height="2*" MinHeight="40" />
-                <RowDefinition Height="30" />
-                <RowDefinition Height="30" />
-                <RowDefinition Height="*" MinHeight="35"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
-            <Button Content="Run" Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="2" Margin="2"
-                    Command="{Binding VmSerialCom.ICRunTasks}" />
-            <Label Content="Times" Grid.Column="0" Grid.Row="1" Margin="2"/>
-            <TextBox Grid.Column="1" Grid.Row="1" Margin="2" VerticalContentAlignment="Center"
-                     Text="{Binding VmSerialCom.Passes}"/>
-            <Label Content="Delay [sec]" Grid.Column="0" Grid.Row="2" Margin="2"/>
-            <TextBox Grid.Column="1" Grid.Row="2"  Margin="2" VerticalContentAlignment="Center"
-                     Text="{Binding VmSerialCom.Delay}"/>
-            <Button Content="Cancel"  Grid.Column="0" Grid.Row="3" Grid.ColumnSpan="2"  Margin="2"
-                    Command="{Binding VmSerialCom.ICSendCmd}" CommandParameter="Cancel" />
+            <Button Grid.Row="0" Margin="2"
+                    Content="New Drop Setup"
+                    Command="{Binding ICNewConf}"/>
+            <Button Grid.Row="1" Margin="2"
+                    Content="Save Drop Setup"
+                    Command="{Binding ICSaveConf}"/>
+            <Button Grid.Row="2" Margin="2"
+                    Content="Copy Drop Setup"
+                    Command="{Binding ICCopyConf}"/>
+            <Button Grid.Row="4" Margin="2"
+                    Content="Create Valve" 
+                    Command="{Binding ICAddDevice}" CommandParameter="Valve" />
+            <Button Grid.Row="5" Margin="2"
+                    Content="Create Flash"
+                    Command="{Binding ICAddDevice}" CommandParameter="Flash" />
+            <Button Grid.Row="6" Margin="2"
+                    Content="Create Camera"
+                    Command="{Binding ICAddDevice}" CommandParameter="Camera" />
         </Grid>
-        <TextBox Grid.Row="0" Grid.Column="3" VerticalScrollBarVisibility="Visible" Margin="2"
-                 AcceptsReturn="True" TextWrapping="Wrap" IsReadOnly="True" TargetUpdated="ScrollToLastLine"
-                 Text="{Binding VmSerialCom.SerialDialog, NotifyOnTargetUpdated=true}" />
+        <view:UCSerialCtrl Grid.Column="1" Grid.Row="0" Margin="2,0"/>
         <TextBox Grid.Row="1" Grid.ColumnSpan="{StaticResource SpanAll}" Margin="2" VerticalAlignment="Bottom"
-                 Text="{Binding VmDropConfig.Name}" />
+                 Text="{Binding ActDropConfig.Name}" />
         <TextBox Grid.Row="2" Grid.Column="0" VerticalScrollBarVisibility="Auto" Margin="2"
-                 AcceptsReturn="True" TextWrapping="Wrap"
-                 Text="{Binding VmDropConfig.Description}" />
-        <ItemsControl Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="{StaticResource SpanAll}" ItemsSource="{Binding VmDropConfig.Devices}" Margin="2,10">
+                 AcceptsReturn="True"
+                 Text="{Binding ActDropConfig.Description}" />
+        <ItemsControl Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="{StaticResource SpanAll}"
+                      ItemsSource="{Binding ActDropConfig.Devices}" Margin="2"
+                      x:Name="CtrlDevices">
             <ItemsControl.ItemsPanel>
                 <ItemsPanelTemplate>
                     <StackPanel Orientation="Horizontal" />
                 </ItemsPanelTemplate>
             </ItemsControl.ItemsPanel>
+            <ItemsControl.ItemTemplate>
+                <DataTemplate>
+                    <view:UCDevice/>
+                </DataTemplate>
+            </ItemsControl.ItemTemplate>
         </ItemsControl>
-        <Button Content="Connect" Grid.Row="3" Grid.Column="0" Margin="2"
-                Command="{Binding VmSerialCom.ICSerialOpen}"
-                CommandParameter="{Binding ElementName=cbPortName, Path=SelectedValue}"/>
-        <Button Content="Disconnect" Grid.Row="3" Grid.Column="1" Margin="2"
-                Command="{Binding VmSerialCom.ICSerialClose}"/>
-        <Button Content="Refresh COM-Ports" Grid.Row="3" Grid.Column="2" Margin="2"
-                Command="{Binding VmSerialCom.ICScanPorts}"/>
-        <ComboBox Grid.Row="3" Grid.Column="3" Grid.ColumnSpan="{StaticResource SpanAll}" Margin="2" IsReadOnly="True"
-                  ItemsSource="{Binding VmSerialCom.PortList}"
-                  SelectedIndex="{Binding VmSerialCom.PortIdx}"
-                  x:Name="cbPortName"/>
     </Grid>
 </UserControl>
